# thoughts

./: .gitignore  CODE.txt  README.md  example_output.json  instructions.txt  instructions_with_graph_features.txt  prompt.txt  pyproject.toml  run.sh
client/: index.html
static/: categories.html  index.html  sentiment.html
templates/: base.html  categories.html  index.html  sentiment.html  style.css  thoughts_template.html
thoughts/api/: database.py  main.py  models.py
thoughts/core/: config.py  html_renderer.py  llm.py
thoughts/utils/: dump_memcache.py  dump_thoughts.py  generate_test_db.py
thoughts/worker/: main.py
